2008-04-03  Jorge Gonzalez  <jo[Brge.gonzalez@artica.es>

	* include/functions_db.php: New functions added to handle plugins and
	export servers.
	
	* include/languages/language_en.php: Updated English translation file.
	
	* general/header.php: Updated header.

	* godmode/agentes/manage_config.php,
	godmode/agentes/module_manager_editor_data.php,
	godmode/agentes/module_manager_editor_network.php,
	godmode/agentes/module_manager.php,
	godmode/agentes/modificar_agente.php,
	godmode/agentes/module_manager_editor_wmi.php,
	godmode/agentes/configurar_agente.php,
	godmode/agentes/module_manager_editor_plugin.php,
	godmode/agentes/module_manager_editor.php,
	godmode/agentes/module_manager_editor_prediction.php,
	godmode/agentes/agent_manager.php, godmode/modules/module_list.php:
	Added infrastructure to add/edit modules.

2008-04-03  Sancho Lerena <slerena@gmail.com>

    * pandoradb_data.sql: IA to prediction in description.

    * pandoradb.sql: Added priority to alert and custom recovery fields.

    * include/styles/tip.css, include/styles/pandora.css: New styles
    for tooltip info (combined and alerts) and some changes in frames for
    agent management / view.

    * include/functions_db.php: Added check_server_status() function to check
    from console server status. If in 15 minutes there is no updated keepalive
    from any server, they will be marked as down. And function return down. 
    This function is now called on each page. Added funtions to display alert
    status in a tooltip.

    * include/languages/language_en.php: More strings.

    * include/functions.php: Added several funtions to simplify alert report.

    * operation/agentes/estado_alertas.php: Updated. Shows also combined 
    alerts and give a lot of information in different tooltips.

    * operation/agentes/estado_ultimopaquete.php: Clean blank spaces in URL.

    * operation/agentes/estado_monitores.php: now is possible to force a
    module refresh from main view.
